# openaiagentidentity

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  README.zh.md  tokens.css
.github/workflows/: ubuntu-package.yml
.hallmark/: log.json  preflight.json
docs/adr/: 0001-use-leptos-and-axum-for-the-web-application.md  0002-offer-the-web-tool-without-user-authentication.md  0003-generate-agent-identity-key-material-in-the-browser.md
src/: app.rs  lib.rs  main.rs  web_config.rs  web_server.rs  web_types.rs
style/: main.css
