[package]
name = "agentidentity"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ed25519-dalek = { version = "2.2", features = ["pkcs8", "rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.8"

[dev-dependencies]
tempfile = "3.20"
